--- a/Index.html
+++ b/Index.html
@@ -8,9 +8,12 @@
 <body>
     <h1>SQL Class Payment</h1>
     <p>Please scan the QR code below to make the payment.</p>
-    <img src="WhatsApp Image 2024-07-01 at 12.16.40 AM.jpeg" alt="PhonePe QR Code" style="width:300px;height:300px;">
+    <img src="https://github.com/Santhosh3734/sql-class-page/blob/main/WhatsApp%20Image%202024-07-01%20at%2012.16.40%20AM.jpeg" alt="PhonePe QR Code" style="width:300px;height:300px;">
 
     <p>After making the payment, click the link below to join the class:</p>
     <a href="https://meet.google.com/zwt-wcvs-vsd">Join SQL Class Meeting</a>
 </body>
 </html>
+
+
+
