--- a/Index.html
+++ b/Index.html
@@ -10,10 +10,40 @@
     <p>Please scan the QR code below to make the payment.</p>
     <img src="https://github.com/Santhosh3734/sql-class-page/blob/main/WhatsApp%20Image%202024-07-01%20at%2012.16.40%20AM.jpeg" alt="PhonePe QR Code" style="width:300px;height:300px;">
 
-    <p>After making the payment, click the link below to join the class:</p>
-    <a href="https://meet.google.com/zwt-wcvs-vsd">Join SQL Class Meeting</a>
+    <p>After making the payment, enter your email address below to receive the meeting link:</p>
+    <form id="paymentForm">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+        <button type="submit">Submit</button>
+    </form>
+
+    <p id="confirmation" style="display: none;">Thank you for your payment. The meeting link has been sent to your email.</p>
+
+    <script>
+        document.getElementById('paymentForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            var email = document.getElementById('email').value;
+            
+            fetch('/submit-payment', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ email: email }),
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    document.getElementById('paymentForm').style.display = 'none';
+                    document.getElementById('confirmation').style.display = 'block';
+                } else {
+                    alert('There was an error processing your payment. Please try again.');
+                }
+            })
+            .catch((error) => {
+                console.error('Error:', error);
+            });
+        });
+    </script>
 </body>
 </html>
-
-
-
